--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,4 +8,8 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
 
+<!--<app-header></app-header>
 <app-meals></app-meals>
+<app-add-meal></app-add-meal>
+<app-menu></app-menu>-->
+<app-meals-proto></app-meals-proto>
