--- a/src/app/meals/meals.component.css
+++ b/src/app/meals/meals.component.css
@@ -1,12 +1,21 @@
 .title{
-    color: purple;
+    color: rgb(0, 132, 255);
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: bold;
 }
 ol{
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    color:purple;
+    color:rgb(0, 132, 255);
 }
 li{
     border-style:dashed;
+    border-radius: 5px;
+}
+body{
+    background:#060a1f;
+    border:1px solid #060a1f;
+    height:90vh;
+}
+*{
+    background:#060a1f;
 }
