Dodanie kategorii(proto), troche css, nowy addmeal

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,5 +11,6 @@
 <!--<app-header></app-header>
 <app-meals></app-meals>
 <app-add-meal></app-add-meal>
-<app-menu></app-menu>-->
-<app-meals-proto></app-meals-proto>
+<app-menu></app-menu>
+<app-meals-proto></app-meals-proto>-->
+<app-categories-proto></app-categories-proto>
