--- a/src/app/category-proto/category-proto.component.css
+++ b/src/app/category-proto/category-proto.component.css
@@ -8,7 +8,7 @@
 }
 
 .card{
-    background: rgb(0, 132, 255);
+    background: rgb(11, 218, 233);
     width: 340px;
     height: 420px;
     border-radius: 10px;
@@ -37,7 +37,7 @@
     color: gold;
 }
 
-.card .Time{
+.card .info .Amount{
     text-align: right;
     color: #252525;
 
@@ -59,4 +59,21 @@
 }
 .input{
     width: 10px;
+}
+
+.card .btn1{
+    display: flex;
+    justify-content: space-around;
+    border: none;
+    margin-top: 10px;
+}
+.card .btn1 button{
+    padding: 10px 20px;
+    border: none;
+    border-radius: 10px;
+    background: #060a1f;
+    color: white;
+    font-size: 15px;
+    font-weight: 700;
+    cursor:pointer;
 }
