update tworzenia meal/dodawanie składników

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,5 +12,6 @@
 <app-meals></app-meals>
 <app-add-meal></app-add-meal>
 <app-menu></app-menu>
-<app-meals-proto></app-meals-proto>-->
-<app-categories-proto></app-categories-proto>
+
+<app-categories-proto></app-categories-proto>-->
+<app-meals-proto></app-meals-proto>
