--- a/src/app/add-meal-proto/add-meal-proto.component.html
+++ b/src/app/add-meal-proto/add-meal-proto.component.html
@@ -11,6 +11,20 @@
             <input type="number" id="rating" #newMealRating>
             <label for="categoryId">Id kategorii:</label> 
             <input type="number" id="categoryId" #newMealCategoryId>
+
+            <label>Składniki:</label>
+            <ul>
+                <li *ngFor="let ingredient of ingredients;index as i; odd as isOdd; even as isEven">
+                    <span>
+                        {{ingredient}}
+                    </span>
+                </li>
+            </ul>
+
+            <label for="ingredients">Nowy składnik:</label> 
+            <input type="text" #fondovalor>
+            <button (click)="getInputIngredient()">Dodaj składnik</button>
+
             <label for="discription">Przepis:</label>
             <textarea class ="extraLabel" type="string" id="discription" #newMealDiscription></textarea>
 
