--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,5 +13,6 @@
 <app-add-meal></app-add-meal>
 <app-menu></app-menu>
 
-<app-categories-proto></app-categories-proto>-->
-<app-meals-proto></app-meals-proto>
+<app-categories-proto></app-categories-proto>
+<app-meals-proto></app-meals-proto>-->
+<app-login-proto></app-login-proto>
