--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,65 @@
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * The content below * * * * * * * * * * * -->
-<!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * -->
-<!-- * * * * * * * * * * and can be replaced. * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * Delete the template below * * * * * * * * * * -->
-<!-- * * * * * * * to get started with your project! * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-
 
 <!--<app-header></app-header>
 <app-meals></app-meals>
 <app-add-meal></app-add-meal>
 <app-menu></app-menu>
 
+
+
+<app-login-proto></app-login-proto>
+
 <app-categories-proto></app-categories-proto>
 <app-meals-proto></app-meals-proto>-->
-<app-login-proto></app-login-proto>
+
+
+<div class="body">
+    <div class="navigation">
+        <ul>
+            <li class="list active">
+                    <a routerLink="/Menu">
+                    <span class="icon">
+                        <ion-icon name="home-outline"></ion-icon>
+                    </span>
+                    <span class="text">Home</span>
+                </a>
+            </li>
+            <li class="list">
+                    <a routerLink="/Kategorie">
+                    <span class="icon">
+                        <ion-icon name="restaurant-outline"></ion-icon>
+                    </span>
+                    <span class="text">Przepisy</span>
+                </a>
+            </li>
+            <li class="list">
+                <a routerLink="/Logowanie">
+                    <span class="icon">
+                        <ion-icon name="accessibility-outline"></ion-icon>
+                    </span>
+                    <span class="text">Profil</span>
+                </a>
+            </li>
+            <li class="list">
+                <a href="#">
+                    <span class="icon">
+                        <ion-icon name="information-circle-outline"></ion-icon>
+                    </span>
+                    <span class="text">O Nas</span>
+                </a>
+            </li>
+            <li class="list">
+                <a href="#">
+                    <span class="icon">
+                        <ion-icon name="call-outline"></ion-icon>
+                    </span>
+                    <span class="text">Kontakt</span>
+                </a>
+            </li>
+            <div class="indicator"></div>
+        </ul>
+    </div>
+    <script src="..." async>
+    </script>
+    </div>
+<router-outlet></router-outlet>
+
