--- a/src/app/category-proto/category-proto.component.html
+++ b/src/app/category-proto/category-proto.component.html
@@ -12,7 +12,7 @@
         </div>
     </div>
     <div class="btn">
-        <button class="btn">Wybierz kategorie</button>
+        <button class="btn" [routerLink]="['/Przepisy',category.Index_nr]">Wybierz kategorie</button>
     </div>
 
     <div class="btn1">
