--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,7 +3,7 @@
 <div class="navigation">
     <ul>
         <li class="list active">
-            <a href="#">
+            <a href="Menu">
                 <span class="icon">
                     <ion-icon name="home-outline"></ion-icon>
                 </span>
@@ -11,7 +11,7 @@
             </a>
         </li>
         <li class="list">
-            <a href="#">
+            <a href="Przepisy">
                 <span class="icon">
                     <ion-icon name="restaurant-outline"></ion-icon>
                 </span>
