--- a/src/app/add-meal-proto/add-meal-proto.component.html
+++ b/src/app/add-meal-proto/add-meal-proto.component.html
@@ -12,7 +12,7 @@
             <label for="categoryId">Id kategorii:</label> 
             <input type="number" id="categoryId" #newMealCategoryId>
 
-            <label>Składniki:</label>
+            <label class="label1">Składniki:</label>
             <ul>
                 <li *ngFor="let ingredient of ingredients;index as i; odd as isOdd; even as isEven">
                     <span>
