--- a/src/app/meals-proto/meals-proto.component.html
+++ b/src/app/meals-proto/meals-proto.component.html
@@ -6,7 +6,7 @@
                 <app-meal-proto [isClicked]="whichClicked===i"[meal] = "meal"></app-meal-proto><!--To jest przekazywanie przez zmienna-->
             </span>
             <!-- <span *ngIf="meal.Rating<5">
-                <app-meal-proto [isClicked]="whichClicked===i"[meal] = "meal"></app-meal-proto><!--To jest przekazywanie przez zmienna
+                <app-meal-proto [isClicked]="whichClicked===i"[meal] = "meal"></app-meal-proto>To jest przekazywanie przez zmienna
             </span>-->
         </li>
     </ul>
