wyrzucenie loginu i innychNiepotrzebnychComponents

--- a/src/app/add-meal-proto/add-meal-proto.component.html
+++ b/src/app/add-meal-proto/add-meal-proto.component.html
@@ -1,4 +1,5 @@
 <form [formGroup]="formModel" (ngSubmit)="onAddMeal()">
+    <h2>Dodanie nowego dania :)</h2>
     <label for="name">Nazwa:</label>
     <input type="text" id="name" formControlName="name">
 
