--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,7 +32,7 @@
                 </a>
             </li>
             <li class="list">
-                <a routerLink="/Logowanie">
+                <a routerLink="">
                     <span class="icon">
                         <ion-icon name="accessibility-outline"></ion-icon>
                     </span>
