dodanie formularza do kategorii

--- a/src/app/categories-proto/categories-proto.component.html
+++ b/src/app/categories-proto/categories-proto.component.html
@@ -9,9 +9,7 @@
             </li>
         </ul>
     </div>
-    <div class="btn">
-        <button class="addCategory">Dodaj Kategorie</button>
-    </div>
+    <app-add-category-proto (newCategory)="onCategoryAdded($event)"></app-add-category-proto>
 
 </body>
 
