--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
-
 <!--<app-header></app-header>
 <app-meals></app-meals>
 <app-add-meal></app-add-meal>
@@ -12,7 +11,7 @@
 <app-meals-proto></app-meals-proto>-->
 
 
-<div class="body">
+<!-- <div class="body">
     <div class="navigation">
         <ul>
             <li class="list active">
@@ -60,6 +59,6 @@
     </div>
     <script src="..." async>
     </script>
-    </div>
+    </div> -->
+<app-navigation-bar></app-navigation-bar>
 <router-outlet></router-outlet>
-
