--- a/src/app/meal-proto/meal-proto.component.html
+++ b/src/app/meal-proto/meal-proto.component.html
@@ -42,4 +42,8 @@
         </div>
         <div class="btn">
             <button class="btn">Pokaz przepis</button>
+            <button class="btn">Usuń danie</button>
+        </div>
+        <div class="Dis">
+            <p>{{mealDis}}</p>
         </div>
