--- a/src/app/meal-proto/meal-proto.component.css
+++ b/src/app/meal-proto/meal-proto.component.css
@@ -63,3 +63,62 @@
 .Dis{
     padding: 20px 30px;
 }
+
+.cardDetails{
+    background: rgb(0, 132, 255);
+    display: flex;
+    width:1800px;
+    border-radius: 10px;
+    color: #060a1f;
+}
+.cardDetails .image > img{
+    width: 400px;
+    border-radius:10px;
+}
+.cardDetails .info{
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-between;
+    padding: 0px 30px 15px 30px;
+}
+
+.cardDetails .info h3{
+    font-size: 30px;
+    font-weight: 700;
+    margin-bottom: 5px;
+}
+
+.cardDetails .info p{
+    font-size: 18px;
+    font-weight: 600;
+    color: purple;
+}
+
+.cardDetails .Time{
+    text-align: right;
+    color: #252525;
+
+}
+.cardDetails .btn{
+    display: flex;
+    justify-content: space-around;
+    border: none;
+}
+.cardDetails .btn button{
+    padding: 10px 5px;
+    border: none;
+    border-radius: 10px;
+    background: rgb(0, 132, 255);
+    color: white;
+    font-size: 15px;
+    font-weight: 700;
+    cursor:pointer;
+    text-align: center;
+}
+
+.cardDetails .discrip{
+    background: rgb(11, 218, 233);
+    border-radius: 5px;
+    width: 1000px;
+    padding: 10px 10px;
+}
