--- a/src/app/meal-proto/meal-proto.component.html
+++ b/src/app/meal-proto/meal-proto.component.html
@@ -21,7 +21,7 @@
             <button class="btn">Pokaz przepis</button>
         </div>
     </div>-->
-    <div class="card">
+    <div class="card"  *ngIf = "showDetails===-1">
         <div class="image">
             <img width="500" height="195" src={{imgSrc}} alt="">
         </div>
@@ -31,19 +31,53 @@
                 <h6 style="color: orange">{{category}}</h6>
                 <p>Ocena: {{meal.Rating}}</p>
             </div>
-            <span *ngIf = "isClicked">
+            <!-- <span *ngIf = "isClicked">
                 <input type="text" [(ngModel)]="meal.Rating"/>
                 <button (click) = "doUnClick()">Chowaj Edytor</button>
-            </span>
+            </span> -->
             <div class="Time">
                 Czas
                 <ion-icon name="time-outline"></ion-icon>: {{meal.TimePrep}} minut
             </div>
         </div>
         <div class="btn">
-            <button class="btn">Pokaz przepis</button>
+            <button (click)="ShowDetails()" class="btn">Pokaz przepis</button>
             <button class="btn">Usuń danie</button>
         </div>
         <div class="Dis">
             <p>{{mealDis}}</p>
         </div>
+    </div>
+
+
+        <div class="cardDetails"  *ngIf = "showDetails!=-1">
+            <div class="image">
+                <img width="500" height="195" src={{imgSrc}} alt="">
+            </div>
+            <div>
+                <div class="info">
+                    <div class="title">
+                        <h3>{{meal.Name}}</h3>
+                        <h6 style="color: orange">{{category}}</h6>
+                        <p>Ocena: {{meal.Rating}}</p>
+                        <div class="Time">
+                            Czas
+                            <ion-icon name="time-outline"></ion-icon>: {{meal.TimePrep}} minut
+                        </div>
+                        <p>Składniki:</p>
+                        <ul *ngFor="let ingredient of meal.Ingredients">
+                            <li>
+                                {{ingredient}}
+                            </li>
+                        </ul>
+                        <div class="discrip">
+                            <p>Opis przygotowania:</p>
+                            {{meal.Discription}}
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="btn">
+                <button  (click)="HideDetails()" class="btn">Schowaj przepis</button>
+                <button class="btn">Usuń danie</button>
+            </div>
