--- a/src/app/add-meal-proto/add-meal-proto.component.html
+++ b/src/app/add-meal-proto/add-meal-proto.component.html
@@ -6,8 +6,8 @@
     <label for="timePrep">Czas przygotowania:</label>
     <input type="text" id="timePrep" formControlName="timePrep">
 
-    <label for="index">Numer Indeksu:</label>
-    <input type="number" id="index" formControlName="index">
+    <label for="index_nr">Numer Indeksu:</label>
+    <input type="number" id="index_nr" formControlName="index_nr">
 
     <label for="rating">Ocena:</label>
     <input type="number" id="rating" formControlName="rating">
