--- a/src/app/add-category-proto/add-category-proto.component.html
+++ b/src/app/add-category-proto/add-category-proto.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="formModel" (ngSubmit)="onAddMeal()">
+<form [formGroup]="formModel" (ngSubmit)="onAddCategory()">
     <h2>Dodanie nowej kategorii dań :)</h2>
     <label for="name">Nazwa kategorii:</label>
     <input type="text" id="name" formControlName="name">
