dodanie delete meal

--- a/src/app/delete-meal-proto/delete-meal-proto.component.html
+++ b/src/app/delete-meal-proto/delete-meal-proto.component.html
@@ -1,1 +1,6 @@
-<p>delete-meal-proto works!</p>
+<div class="delete">
+    <p>Danie zostało pomyslnie usiniete</p>
+    <div class="btns">
+        <button (click)="delete()">OK</button>
+    </div>
+</div>
