--- a/src/app/meals-proto/meals-proto.component.html
+++ b/src/app/meals-proto/meals-proto.component.html
@@ -8,6 +8,7 @@
         </li>
     </ul>
     <app-add-meal-proto  (newMeal)="onMealAdded($event)"></app-add-meal-proto>
+    <app-delete-meal-proto></app-delete-meal-proto>
 </body>
 
 
