--- a/src/app/meal-proto/meal-proto.component.html
+++ b/src/app/meal-proto/meal-proto.component.html
@@ -72,7 +72,7 @@
                         </ul>
                         <div class="discrip">
                             <p>Opis przygotowania:</p>
-                            {{meal.Discription}}
+                            {{meal.Description}}
                         </div>
                     </div>
                 </div>
