--- a/src/app/add-category-proto/add-category-proto.component.html
+++ b/src/app/add-category-proto/add-category-proto.component.html
@@ -1,11 +1,14 @@
 <form [formGroup]="formModel" (ngSubmit)="onAddCategory()">
     <h2>Dodanie nowej kategorii dań :)</h2>
     <label for="name">Nazwa kategorii:</label>
-    <input type="text" id="name" formControlName="name">
-
-    <label for="index_nr">Nr indeksu:</label>
-    <input type="text" id="index_nr" formControlName="index_nr">
-
-    <input type="submit" value="Dodaj" />
+    <input type="text" formControlName="name">
+    <div *ngIf="name?.invalid && (name?.dirty || name?.touched)" class="alert">
+        <div *ngIf="name?.errors?.['required']">
+            Nazwa jest wymagana.
+          </div>
+          <div *ngIf="name?.errors?.['minlength']">
+            Nazwa musi mieć co najmniej 3 znaki.
+          </div>
+    </div>
+    <input type="submit" value="Dodaj" *ngIf="formModel.valid" />
 </form>
-
