dodanie delete do meal

--- a/src/app/delete-meal-proto/delete-meal-proto.component.html
+++ b/src/app/delete-meal-proto/delete-meal-proto.component.html
@@ -1,6 +1,3 @@
-<div class="delete">
-    <p>Danie zostało pomyslnie usiniete</p>
-    <div class="btns">
-        <button (click)="delete()">OK</button>
-    </div>
-</div>
+<p style="color:white">Danie zostało usunięte!</p>
+<button (click)="delete()">OK</button>
+
