--- a/src/app/meals-proto/meals-proto.component.html
+++ b/src/app/meals-proto/meals-proto.component.html
@@ -3,12 +3,11 @@
     <ul>
         <li *ngFor="let meal of meals;index as i; odd as isOdd; even as isEven" (click) = "mealClicked(i)">
             <span *ngIf="meal.CategoryId==this._id">
-                <app-meal-proto [isClicked]="whichClicked===i"[meal] = "meal"></app-meal-proto><!--To jest przekazywanie przez zmienna-->
+                <app-meal-proto [isClicked]="whichClicked===i"[meal] = "meal" (doDeleteInParent)="deleteMeal(meal)"></app-meal-proto><!--To jest przekazywanie przez zmienna-->
             </span>
         </li>
     </ul>
     <app-add-meal-proto  (newMeal)="onMealAdded($event)"></app-add-meal-proto>
-    <app-delete-meal-proto></app-delete-meal-proto>
 </body>
 
 
