Button to hide form + finished validation

--- a/src/app/add-category-proto/add-category-proto.component.html
+++ b/src/app/add-category-proto/add-category-proto.component.html
@@ -1,14 +1,29 @@
-<form [formGroup]="formModel" (ngSubmit)="onAddCategory()">
-    <h2>Dodanie nowej kategorii dań :)</h2>
-    <label for="name">Nazwa kategorii:</label>
-    <input type="text" formControlName="name">
-    <div *ngIf="name?.invalid && (name?.dirty || name?.touched)" class="alert">
-        <div *ngIf="name?.errors?.['required']">
-            Nazwa jest wymagana.
-          </div>
-          <div *ngIf="name?.errors?.['minlength']">
-            Nazwa musi mieć co najmniej 3 znaki.
-          </div>
+<form [formGroup]="formModel" (ngSubmit)="onAddCategory()" *ngIf="isShowInfo">
+  <h2>Dodanie nowej kategorii dań :)</h2>
+  <label for="name">Nazwa kategorii:</label>
+  <input type="text" formControlName="name">
+  <div *ngIf="name?.invalid && (name?.dirty || name?.touched)" class="alert">
+    <div *ngIf="name?.errors?.['required']">
+      Nazwa jest wymagana.
     </div>
-    <input type="submit" value="Dodaj" *ngIf="formModel.valid" />
+    <small *ngIf="name?.errors?.['minlength']">
+      Nazwa musi mieć co najmniej 3 znaki.
+    </small>
+  </div>
+  <input type="submit" value="Dodaj" [disabled]="formModel.invalid" />
+  <small *ngIf="formModel.invalid">
+    Proszę wypełnić wszystkie pola przed dodaniem przepisu.
+  </small>
 </form>
+
+
+<button class="button" style=" padding: 10px 30px;
+border: none;
+margin-left: 25%;
+border-radius: 10px;
+color: black;
+font-size: 15px;
+font-weight: 700;
+cursor:pointer;
+min-width: 50%;" (click)="isShowInfo = !isShowInfo; showButton = !showButton" *ngIf="showButton">Dodaj
+  Kategorię</button>
