--- a/src/app/meals-proto/meals-proto.component.html
+++ b/src/app/meals-proto/meals-proto.component.html
@@ -7,7 +7,5 @@
             </span>
         </li>
     </ul>
-    <app-add-meal-proto  (newMeal)="onMealAdded($event)"></app-add-meal-proto>
+    <app-add-meal-proto style="margin: auto"  (newMeal)="onMealAdded($event)"></app-add-meal-proto>
 </body>
-
-
