--- a/src/app/add-meal-proto/add-meal-proto.component.html
+++ b/src/app/add-meal-proto/add-meal-proto.component.html
@@ -1,41 +1,76 @@
-<form [formGroup]="formModel" (ngSubmit)="onAddMeal()">
-    <h2>Dodanie nowego dania :)</h2>
-    <label for="name">Nazwa:</label>
-    <input type="text" id="name" formControlName="name">
-    <div *ngIf="name?.invalid && (name?.dirty || name?.touched)" class="alert">
-      <small *ngIf="name?.errors?.['required']">
-          Nazwa jest wymagana.
-        </small>
-        <small *ngIf="name?.errors?.['minlength']">
-          Nazwa musi mieć co najmniej 3 znaki.
-        </small>
-    </div>
-    <label for="timePrep">Czas przygotowania:</label>
-    <input type="text" id="timePrep" formControlName="timePrep">
-    <!-- <div *ngIf="name?.invalid && (name?.dirty || name?.touched)" class="alert"></div> -->
+<form [formGroup]="formModel" (ngSubmit)="onAddMeal()" *ngIf="isShowInfo">
+  <h2>Dodanie nowego dania :)</h2>
+  <label for="name">Nazwa:</label>
+  <input type="text" id="name" formControlName="name">
+  <div *ngIf="name?.invalid && (name?.dirty || name?.touched)" class="alert">
+    <small *ngIf="name?.errors?.['required']">
+      Nazwa jest wymagana.
+    </small>
+    <small *ngIf="name?.errors?.['minlength']">
+      Nazwa musi mieć co najmniej 3 znaki.
+    </small>
+  </div>
 
-    <label for="index_nr">Numer Indeksu:</label>
-    <input type="number" id="index_nr" formControlName="index_nr">
-<!-- <div *ngIf="name?.invalid && (name?.dirty || name?.touched)" class="alert"></div> -->
-    
-  
-    <label for="rating">Ocena:</label>
-    <input type="number" id="rating" formControlName="rating">
-<!-- <div *ngIf="name?.invalid && (name?.dirty || name?.touched)" class="alert"></div> -->
-    <label for="categoryId">Id kategorii:</label> 
-    <input type="number" id="categoryId" formControlName="categoryId">
-<!-- <div *ngIf="name?.invalid && (name?.dirty || name?.touched)" class="alert"></div> -->
-    <label for="description">Przepis:</label>
-    <textarea class ="extraLabel" type="string" id="description" formControlName="description"></textarea>
-<!-- <div *ngIf="name?.invalid && (name?.dirty || name?.touched)" class="alert"></div> -->
-    <div formArrayName="ingredientsArray">
-        <div *ngFor="let ingredient of ingredients.controls; let i=index" [formGroupName]="i">
-          <label>Nowy składnik: </label>
-          <input type="text" formControlName="ingredient" />
-          <!-- <div *ngIf="name?.invalid && (name?.dirty || name?.touched)" class="alert"></div> -->
-        </div>
+  <label for="timePrep">Czas przygotowania:</label>
+  <input type="number" id="timePrep" formControlName="timePrep">
+  <div *ngIf="timePrep?.invalid && (timePrep?.dirty || timePrep?.touched)" class="alert">
+    <small *ngIf="timePrep?.errors?.['required']">
+      Czas przygotowania jest wymagany.<br>
+    </small>
+    <small *ngIf="timePrep?.errors?.['min'] || timePrep?.errors?.['max']">
+      Czas przygotowania powinien być większy niż 0, mniejszy niż 999.<br>
+    </small>
+    <small *ngIf="timePrep?.errors?.['pattern']">
+      Czas przygotowania powinien być długością w minutach.<br>
+    </small>
+  </div>
+
+  <!-- <label for="index_nr">Numer Indeksu:</label>
+  <input type="number" id="index_nr" formControlName="index_nr">
+  <div *ngIf="name?.invalid && (name?.dirty || name?.touched)" class="alert"></div> -->
+
+  <label for="rating">Trudność przygotowania:</label>
+  <input type="number" id="rating" formControlName="rating" min="1" max="5">
+  <div *ngIf="rating?.invalid && (rating?.dirty || rating?.touched)" class="alert">
+    <small *ngIf="rating?.errors?.['required']">
+      Trudność przygotowania jest wymagana.
+    </small>
+    <small *ngIf="rating?.errors?.['min'] || rating?.errors?.['max']">
+      Trudność przygotowania powinna być w przedziale 0 - łatwy do 5 - bardzo trudny.<br>
+    </small>
+  </div>
+
+  <label for="categoryId">Id kategorii:</label>
+  <input type="number" id="categoryId" formControlName="categoryId">
+  <!-- <div *ngIf="name?.invalid && (name?.dirty || name?.touched)" class="alert"></div> -->
+
+
+  <label for="description">Przepis:</label>
+  <textarea class="extraLabel" type="string" id="description" formControlName="description"></textarea>
+  <div *ngIf="description?.invalid && (description?.dirty || description?.touched)" class="alert">
+    <small *ngIf="description?.errors?.['required']">
+      Opis jest wymagany.
+    </small>
+  </div>
+
+  <div formArrayName="ingredientsArray">
+    <div *ngFor="let ingredient of ingredients.controls; let i=index" [formGroupName]="i">
+      <label>Nowy składnik: </label>
+      <input type="text" formControlName="ingredient" />
+      <div *ngIf="ingredient?.invalid && (ingredient?.dirty || ingredient?.touched)" class="alert">
+        <small>
+          Nazwa składnika nie może być pusta.
+        </small>
       </div>
-      <button style="width: 21.5rem" type="button" (click)="moreIngredients()">Dodaj składnik</button>
-    <input type="submit" value="Dodaj przepis" />
+    </div>
+  </div>
+  <button style="width: 21.5rem" type="button" (click)="moreIngredients()">Dodaj składnik</button>
+  <button class="button" type="submit" [disabled]="formModel.invalid">Dodaj przepis</button>
+  <small *ngIf="formModel.invalid">
+    Proszę wypełnić wszystkie pola przed dodaniem przepisu.
+  </small>
 </form>
 
+<button class="button" style="margin-left: 25%;min-width: 50%; color: black; background-color: white;"
+  (click)="isShowInfo = !isShowInfo; showButton = !showButton" *ngIf="showButton">Dodaj
+  Przepis</button>
