--- a/src/app/add-meal-proto/add-meal-proto.component.html
+++ b/src/app/add-meal-proto/add-meal-proto.component.html
@@ -1,3 +1,5 @@
+
+
 <form [formGroup]="formModel" (ngSubmit)="onAddMeal()">
     <h2>Dodanie nowego dania :)</h2>
     <label for="name">Nazwa:</label>
@@ -36,6 +38,12 @@
         </div>
       </div>
       <button style="width: 21.5rem" type="button" (click)="moreIngredients()">Dodaj składnik</button>
+      <div class="tag">
+        <li *ngFor="let tag of tags;index as i; odd as isOdd; even as isEven"(click) = "tagClicked(i)">
+          {{tag}}
+          <button style="width: 10.5rem" type="button" >Dodaj tag</button>
+        </li>
+        
+      </div>
     <input type="submit" value="Dodaj przepis" />
 </form>
-
