--- a/src/app/delete-category-proto/delete-category-proto.component.html
+++ b/src/app/delete-category-proto/delete-category-proto.component.html
@@ -1,1 +1,4 @@
-<p>delete-category-proto works!</p>
+<div>
+    <span style="color:white">Kategoria została usunięta!</span>
+    <button (click)="delete()">OK</button>
+</div>
