--- a/src/app/delete-meal-proto/delete-meal-proto.component.html
+++ b/src/app/delete-meal-proto/delete-meal-proto.component.html
@@ -1,3 +1,5 @@
-<p style="color:white">Danie zostało usunięte!</p>
-<button (click)="delete()">OK</button>
+<div>
+    <span style="color:white">Danie zostało usunięte!</span>
+    <button (click)="delete()">OK</button>
+</div>
 
