--- a/src/app/category-proto/category-proto.component.html
+++ b/src/app/category-proto/category-proto.component.html
@@ -9,11 +9,11 @@
         </div>
     </div>
     <div class="btn">
-        <button class="btn" [routerLink]="['/Przepisy',category.Index_nr]">Wybierz kategorie</button>
+        <button class="btn" [routerLink]="['/Przepisy',category.Index_nr]">Wybierz kategorie<ion-icon name="download-outline"></ion-icon></button>
     </div>
 
     <div class="btn1">
-        <button class="btn1">Dodaj danie <ion-icon name="add-circle-outline"></ion-icon></button>
+        <button class="btn1" (click)="deleteThisCategory()">Usuń kategorie <ion-icon name="remove-circle-outline"></ion-icon></button>
     </div>
+    <app-delete-category-proto *ngIf="categoryToDelete!=-1" (isDelete)="isDelete($event)"></app-delete-category-proto>
 </div>
-
