--- a/src/app/meal-proto/meal-proto.component.html
+++ b/src/app/meal-proto/meal-proto.component.html
@@ -80,4 +80,5 @@
             </div>
             <div class="btn">
                 <button  (click)="HideDetails()" class="btn">Schowaj przepis</button>
+                <button (click)="clickOnMeal(meal.Index_nr)">Edytuj przepis</button>
             </div>
