--- a/src/app/meals-proto/meals-proto.component.html
+++ b/src/app/meals-proto/meals-proto.component.html
@@ -3,7 +3,10 @@
     <ul>
         <li *ngFor="let meal of meals;index as i; odd as isOdd; even as isEven" (click) = "mealClicked(i)">
             <span *ngIf="meal.CategoryId==this._id">
-                <app-meal-proto [isClicked]="whichClicked===i"[meal] = "meal" (doDeleteInParent)="deleteMeal(meal)"></app-meal-proto><!--To jest przekazywanie przez zmienna-->
+                <app-meal-proto [isClicked]="whichClicked===i" [meal] = "meal" (doDeleteInParent)="deleteMeal(meal)" (showEditForm)="showEditForm($event)"></app-meal-proto><!--To jest przekazywanie przez zmienna-->
+                <span *ngIf="whichMealForEdit==i">
+                    <app-edit-meal-proto [mealForEdit]="meal" (editMethod)="doEdit($event)"></app-edit-meal-proto>
+                </span>
             </span>
         </li>
     </ul>
