--- a/src/app/edit-category-proto/edit-category-proto.component.html
+++ b/src/app/edit-category-proto/edit-category-proto.component.html
@@ -1,6 +1,6 @@
-
-<form [formGroup]="formModel" (ngSubmit)="Edit()">
-    <h2>Dodanie nowej kategorii dań :)</h2>
+<div class="d1">
+    <form [formGroup]="formModel" (ngSubmit)="hide()">
+    <h2>Edytuj kategie dań :)</h2>
     <label for="name">Nazwa kategorii:</label>
     <input type="text" formControlName="name">
     <div *ngIf="name?.invalid && (name?.dirty || name?.touched)" class="alert">
@@ -11,8 +11,9 @@
         Nazwa musi mieć co najmniej 3 znaki.
       </small>
     </div>
-    <input type="submit" value="Zapisz" [disabled]="formModel.invalid" />
+    <input type="submit" value="Save" [disabled]="formModel.invalid" />
     <small *ngIf="formModel.invalid">
       Proszę wypełnić wszystkie pola przed dodaniem przepisu.
     </small>
   </form>
+</div>
