--- a/src/app/category-proto/category-proto.component.html
+++ b/src/app/category-proto/category-proto.component.html
@@ -14,6 +14,8 @@
 
     <div class="btn1">
         <button class="btn1" (click)="deleteThisCategory()">Usuń kategorie <ion-icon name="remove-circle-outline"></ion-icon></button>
+        <button class="btn1" (click)="clickOnCategory(category.Index_nr)">Edytuj kategorie</button>
     </div>
     <app-delete-category-proto *ngIf="categoryToDelete!=-1" (isDelete)="isDelete($event)"></app-delete-category-proto>
+    
 </div>
