--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -60,5 +60,11 @@
     <script src="..." async>
     </script>
     </div> -->
-<app-navigation-bar></app-navigation-bar>
-<router-outlet></router-outlet>
+
+<body>
+  <app-navigation-bar></app-navigation-bar>
+  <router-outlet></router-outlet>
+  <footer style="position: fixed;bottom: 0; ">
+    FooterFooterFooterFooterFooterFooterFooterFooterFooterFooterFooterFooterFooter
+  </footer>
+</body>
