--- a/src/app/navigation-bar/navigation-bar.component.html
+++ b/src/app/navigation-bar/navigation-bar.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary">
-  <span>Kuchnie Świata</span>
+  <span>Pyszniutki</span>
   <div class="spacer"></div>
   <a mat-button routerLink="/Menu">Home</a>
   <a mat-button routerLink="/Kategorie">Przepisy</a>
